Save/restore BLC_HIST_CTL as well at suspend/resume time; which allows the x40 LCD to light up after unsuspend. https://bugzilla.kernel.org/attachment.cgi?id=23409 https://bugzilla.kernel.org/show_bug.cgi?id=10985 ok oga